# REMANI-Planner

./: README.md  index.html
.github/workflows/: page.yaml
Utils/mm_utils/: CMakeLists.txt  package.xml
Utils/mm_utils/include/mm_utils/: converters.h  geometry_utils.h  utils.h
Utils/mm_utils/src/: mm_utils_test.cpp
Utils/quadrotor_msgs/msg/: PolynomialTraj.msg
Utils/rviz_plugins/: CMakeLists.txt
mm_controller/: CMakeLists.txt  package.xml
mm_controller/include/mm_controller/: controller_utils.hpp  mm_controller_fsm.hpp  polynomial_trajectory.h
mm_controller/src/: controller_utils.cpp  mm_controller_fsm.cpp  mm_controller_node.cpp
mm_simulator/fake_mm/: CMakeLists.txt  package.xml
mm_simulator/fake_mm/include/fake_mm/: model_vis.hpp
mm_simulator/fake_mm/src/: cmd_2_state.cpp  model_vis.cpp
mm_simulator/local_sensing/: CMakeLists.txt
mm_simulator/local_sensing/src/: euroc.cpp  pcl_render_node.cpp  pointcloud_render_node.cpp
mm_simulator/map_generator/: CMakeLists.txt  README.md
mm_simulator/map_generator/src/: map_generator.cpp
remani_planner/mm_config/: CMakeLists.txt  package.xml
remani_planner/mm_config/include/mm_config/: mm_config.hpp
remani_planner/mm_config/meshes/: mobile_base.STL
remani_planner/mm_config/meshes/FastArmer/: FastArmer.urdf  base_link.STL  gripper.dae  gripper.stl  gripper_base.dae  gripper_left.dae  gripper_right.dae  link1.STL  link3.STL  link4.STL  link5.STL  link6.STL
remani_planner/mm_config/src/: mm_config.cpp
remani_planner/path_searching/: CMakeLists.txt  package.xml
remani_planner/path_searching/include/path_searching/: kino_astar.h  rrt.h  sample_mani_RRT.h
remani_planner/path_searching/src/: kino_astar.cpp  rrt.cpp  sample_mani_RRT.cpp
remani_planner/plan_env/: CMakeLists.txt
remani_planner/plan_env/include/plan_env/: grid_map.h
remani_planner/plan_env/src/: grid_map.cpp
remani_planner/plan_manage/: CMakeLists.txt  package.xml
remani_planner/plan_manage/config/: exp0_param.yaml  exp1_param.yaml  mm_param.yaml  remani_planner_param.yaml
remani_planner/plan_manage/include/plan_manage/: planner_manager.h  planning_visualization.h  remani_replan_fsm.h
remani_planner/plan_manage/launch/: advanced_param_sim.xml  exp0.launch  exp0.rviz  exp1.launch  exp1.rviz  run_in_sim.launch  simulator.xml
remani_planner/plan_manage/src/: planner_manager.cpp  planning_visualization.cpp  remani_planner_node.cpp  remani_replan_fsm.cpp
remani_planner/traj_opt/: CMakeLists.txt  package.xml
remani_planner/traj_opt/include/optimizer/: lbfgs.hpp  poly_traj_optimizer.hpp
remani_planner/traj_opt/src/: poly_traj_optimizer.cpp
remani_planner/traj_utils/: CMakeLists.txt  package.xml
remani_planner/traj_utils/include/traj_utils/: plan_container.hpp  poly_traj_utils.hpp
static/assets/imgs/: exp1.mp4.REMOVED.git-id  exp2.mp4.REMOVED.git-id  exp3.mp4.REMOVED.git-id  exp4.mp4.REMOVED.git-id  exp7-5backward.mp4.REMOVED.git-id
static/css/: bootstrap-4.4.1.css  index.css  project.css
static/images/: top.png.REMOVED.git-id
static/js/: bootstrap-4.4.1.js  popper.min.js
