<?xml version="1.0"?>
<package format="2">
  <name>mm_config</name>
  <version>0.0.0</version>
  <description>The mm_config package</description>
  <maintainer email="ckwu1201@163.com">Chengkai Wu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>plan_env</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>plan_env</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>plan_env</exec_depend>

  <export>

  </export>
</package>
